<resources>
  <string name="accept_terms">Accept terms</string>
  <string name="accept_reports_details">Automatically transmit error messages and app usage</string>
  <string name="accept_terms_details">I have read the disclaimer and privacy policy and accept these conditions.</string>
  <string name="app_name" translatable="false">Cyface</string>
  <string name="notification_channel_name_info">Info</string>
  <string name="notification_channel_name_warning">Warnings</string>
  <string name="notification_channel_description_info">Informative notifications, e.g. when the upload finished successful.</string>
  <string name="notification_channel_description_warning">Warning messages, e.g. when the storage is full and the measuring had to be canceled. This notification should not be disabled.</string>
  <string name="toast_last_tracking_crashed">Your last tracking stopped unexpectedly. Consider following the `Setup Guide` in the Sidebar or sending us feedback.</string>
  <string name="dialog_modality_title">Choose modality type</string>
  <string-array name="dialog_modality">
    <item>Car</item>
    <item>Bicycle</item>
    <item>Walking</item>
    <item>Bus</item>
    <item>Train</item>
  </string-array>
  <string name="modality_car">Car</string>
  <string name="modality_bicycle">Bicycle</string>
  <string name="modality_walking">Walking</string>
  <string name="modality_bus">Bus</string>
  <string name="modality_train">Train</string>
  <string name="modality_motorbike">Motorbike</string>
  <string name="logo_content_description" translatable="false">Cyface Logo</string>
  <string name="login_name">Login</string>
  <string name="password">Password</string>
  <string name="username">Login</string>
  <string name="your_request">Your request</string>
  <string name="no_login_contact_us">Login Problems? Please <font color="#3f8730">contact us</font>.</string>
  <string name="guest_login_button">Try as guest</string>
  <string name="title_activity_login">Sign in</string>
  <string name="error_message_field_required">This field is required</string>
  <string name="error_message_invalid_email">This email address is invalid</string>
  <string name="error_message_password_too_short">This password is too short</string>
  <string name="error_message_login_too_short">This username is too short</string>
  <string name="synchronize">Upload</string>
  <string name="distance">Distance</string>
  <string name="measurement_id">Measurement Id</string>
  <string name="title_dialog_starting_data_capture">Starting Data Capture</string>
  <string name="text_button_start">Start Capturing</string>
  <string name="error_message_capturing_canceled_no_space">You need to free some space in order to start capturing.</string>
  <string name="notification_title_capturing_stopped">Stopped Capturing</string>
  <string name="msg_calibrating">Calibrating</string>
  <string name="capturing_active">Capturing ongoing</string>
  <string name="error_message_sync_canceled_no_wifi">You need a Wi-Fi connection to upload data.</string>
  <string name="error_message_sync_canceled_disabled">The synchronisation is currently disabled via the app settings.</string>
  <string name="app_slogan" translatable="false">EASY RIDING</string>
  <string name="settings">Settings</string>
  <string name="drawer_title_home">Home</string>
  <string name="drawer_title_measurements">Measurements</string>
  <string name="drawer_title_feedback">Feedback</string>
  <string name="drawer_title_guide">Setup guide</string>
  <string name="drawer_title_imprint">Imprint</string>
  <string name="drawer_title_logout">Logout</string>
  <string name="drawer_setting_zoom_to_location">Always centered map</string>
  <string name="drawer_setting_synchronize">Synchronisation</string>
  <string name="drawer_setting_speed_sensor">External sensor</string>
  <string name="drawer_setting_pictures">Camera mode</string>
  <string name="sync_disabled_toast">If you capture measurements without syncing over Wi-Fi for too long the app will use much storage space until the data is synced or deleted</string>
  <string name="zoom_to_location_enabled_toast">Attention: When you activate this option and leave the app opened during long drives the app will use much mobile data to download the quality data for the whole route</string>
  <string name="no_camera_available_toast">Sorry, no camera found to be used.</string>
  <string name="API_too_low_for_bluetooth">Currently you can only use external bluetooth sensors with devices which have Android 4.3 or higher installed.</string>
  <string name="bluetooth_setup_failed">Error starting the bluetooth component.</string>
  <string name="drawer_setting_camera_focus_distance">Camera focus distance</string>
  <string name="drawer_settings">Settings</string>
  <string name="settings_sensor_frequency">Sensor frequency</string>
  <string name="settings_sensor_frequency_unit" translatable="false">Hz</string>
  <string name="modality_type">Modality type</string>
  <string name="mark_all_menu_item">Select all items</string>
  <string name="delete_marked_menu_item">Delete marked</string>
  <string name="measurement">Measurement</string>
  <string name="toast_export">Exported:</string>
  <string name="title_menu_item_export">Export all</string>
  <string name="export_data">Exporting data …\n(this could take a few minutes)</string>
  <string name="export_data_no_permission">This app needs permissions to write to external storage to export data.</string>
  <string name="delete_data">Deleting marked measurements …</string>
  <string name="delete_data_non_selected">Please select measurements to delete. Long press a measurement to select multiple entries.</string>
  <string name="toast_selection_mode_enabled">Selection mode enabled</string>
  <string name="toast_selection_mode_disabled">Selection mode disabled</string>
  <string name="toast_no_locations_found">No locations found</string>
  <string name="toast_measurement_deletion_success">The selected measurements were deleted from this device. The copy of the synchronized data on the server are not affected.</string>
  <string name="toast_item_deletion_success">The selected items were deleted.</string>
  <string name="toast_measurement_paused">Trip paused</string>
  <string name="toast_measurement_resumed">Trip resumed</string>
  <string name="toast_select_location">Please select a location</string>
  <string name="toast_item_created_on_tracks_nearest_position">The item was created and moved onto the track</string>
  <string name="camera_status">Camera Status</string>
  <string name="camera_status_connected">camera: ready</string>
  <string name="camera_status_paused">camera: paused</string>
  <string name="camera_capturing_active">Camera capturing ongoing</string>
  <string name="experimental_feature_warning">Attention: This is an experimental feature which needs manual adjustment and evaluation. Do not enable this if you do not exactly know what it does.</string>
  <string name="camera_settings_JPEG_settings">JPEG picture-mode</string>
  <string name="camera_settings_title_supported_features">Supported Features (main camera)</string>
  <string name="camera_feature_camera2_support_level"> \'camera2\' support level:</string>
  <string name="camera_feature_manual_sensor">Manual sensor control:</string>
  <string name="camera_feature_focus_distance_calibration">Focus distance: </string>
  <string name="camera_feature_focus_distance_minimum">Shortest focus distance: </string>
  <string name="camera_feature_hyper_focal_distance">Hyper-focal distance: </string>
  <string name="static_camera_focus_distance">Static Camera Focus Distance</string>
  <string name="static_camera_exposure_time">Static Camera Exposure Time (\"S-/Tv-mode\")</string>
  <string name="static_camera_exposure_value">Exposure Value (for S-/Tv-mode)</string>
  <string name="distance_based_capturing">Distance based capturing</string>
  <string name="camera_images">images: </string>
  <string name="notification_title_picture_capturing_decreased">Decreased picture capturing rate</string>
  <string name="notification_text_picture_capturing_decreased">Less images were captured than expected by the service.</string>
  <string name="publisher">Publisher</string>
  <string name="publisher_content">
        Cyface GmbH
        \nBehringstraße 46
        \n01159 Dresden
        \nGermany\n

        \nRepresented by:
        \nDr. Klemens Muthmann
        \nArmin Schnabel
        \nDirk Ackner\n

        \nEmail: mail@cyface.de
        \nPhone: +49 351 481 877 30\n

        \nAmtsgericht Dresden
        \nHRB: 36726
        \nUSt.-Id. (VAT no.): DE-312598748</string>
  <string name="reports">Error tracking by Sentry</string>
  <string name="reports_content">
        We are constantly improving and developing our app. Nevertheless, we cannot guarantee error-free operation of the app. In order to keep possible programming errors to a minimum, we use Sentry, a service provided by Functional Software Inc, 132 Hawthorne St, San Francisco, CA 94107, USA (hereinafter "Sentry"). Sentry monitors errors that occur within our App and informs us of them. In the event of a software error, the following information is automatically transmitted to Sentry:

        \n\n- Error messages that occur while using the App
        \n- Information about the use of the app immediately before the error occurred
        \n- Date and time of the errors, start time of the app
        \n- Device information: operating system, app version and device model
        \n- Identifier to identify errors from the same device
        \n- Status of the device: battery charge and temperature, charging state, boot time, memory space, connection type (Wi-Fi/mobile data), storage space, available storage, preferred language, device orientation, screen resolution and density, time zone
        \n- IP address of the machine (when the connection is established)

        \n\nThe information is collected anonymously, not used for personal purposes or for advertising purposes and then deleted again. The legal basis for the above-mentioned data processing is Art. 6, Paragraph 1 lit. f of the GDPR.

        \n\nThe sole purpose of processing is to improve the stability and usability of the app. For further information regarding data processing by Sentry, please refer to the Sentry Privacy Policy: https://sentry.io/privacy/</string>
  <string name="disclaimer">Disclaimer</string>
  <string name="disclaimer_content">The application (hereinafter also: \"app\") is in <b>beta state</b>. It was developed to the best of our knowledge with utmost care by trained software developers. We are testing the app regularly and extensively on our own mobile devices.
        \nHowever, we currently can\'t ensure that everything works as expected and we assume no liability whatsoever for damage that may result from the use of the app. At the same time, we can\'t promise you all time availability of our servers and services such as data upload, data processing and data visualization.
        \n<b>By using this application you accept these conditions and the privacy conditions below.</b></string>
  <string name="privacy">Privacy Policy</string>
</resources>