<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_item_guide"
            android:icon="@drawable/ic_help"
            android:title="@string/drawer_title_guide" />
        <item
            android:id="@+id/drawer_item_feedback"
            android:icon="@drawable/ic_chat_bubble"
            android:title="@string/drawer_title_feedback" />
        <item
            android:id="@+id/drawer_item_imprint"
            android:icon="@drawable/ic_business"
            android:title="@string/drawer_title_imprint" />
    </group>

    <item android:title="@string/settings">
        <menu>
            <group
                android:id="@+id/menu_bottom"
                android:checkableBehavior="single">

                <item
                    android:id="@+id/drawer_setting_zoom_to_location"
                    android:title="@string/drawer_setting_zoom_to_location"
                    app:actionLayout="@layout/drawer_list_switch"
                    app:showAsAction="ifRoom"
                    android:checkable="false" />

                <item
                    android:id="@+id/drawer_setting_synchronization"
                    android:title="@string/drawer_setting_upload"
                    app:actionLayout="@layout/drawer_list_switch"
                    app:showAsAction="always"
                    android:checkable="false" />
            </group>
        </menu>
    </item>

    <group
        android:id="@+id/menu_logout"
        android:checkableBehavior="none">
        <item
            android:id="@+id/drawer_item_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/drawer_title_logout" />
    </group>
</menu>
