<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.LoginActivity">

    <!-- This layout was designed so that the important fields are not covered by the keyboard panel
         which usually takes 30-50% of the bottom screen. If you change anything here, please verify
         that this is still the case.
         Tested on:     Nexus 5, Nexus 5X -->

    <!-- First 20% height: Logo -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="24dp">

        <!-- Using AppCompatImageButton and custom:srcCompat with tools:ignore to make this compatible
             for lower android versions -->
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/appCompatImageButton"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/logo_content_description"
            android:scaleType="fitXY"
            android:layout_gravity="bottom"
            custom:srcCompat="@drawable/ic_logo_text_only"
            tools:ignore="MissingPrefix" />
    </LinearLayout>

    <!-- The other 80% height: ca. 30% Login fields, the rest is blank as this area is covered by the
         keyboard panel -->

    <ScrollView
        android:id="@+id/login_form_wrapper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <!-- Login input -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_name"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password input -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Progress bar: Invisible by default. Visible during authentication. -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/login_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:visibility="gone" />
            </RelativeLayout>

            <!-- Login button -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username" />

            <TextView
                android:id="@+id/login_link_registration"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/no_login_register"
                android:layout_marginTop="16dp"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>